--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "bedrock-portal",
   "version": "0.6.3",
   "description": "Creates a joinable session in Minecraft Bedrock Edition that can route players to their a specified host",
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "main": "./examples/realm.js",
+  "types": "./examples/realm.js",
     "scripts": {
     "build": "tsc",
     "watch": "tsc --watch",
